# vimango_mcp_remote

./: .gitignore  CLAUDE.md  README.md  SKILL.md  config.json.example  pyproject.toml  vimango-cli
src/vimango_remote_mcp/: __init__.py  cli.py  db.py  server.py
